# speedometer

./: .gitignore  Cargo.toml
.github/workflows/: release.yml  rust.yml
src/: lib.rs  log.rs  main.rs
test_data/: ndt5-devicename-etc.jsonl  ndt7-devicename2-etc.jsonl  speedtest-cli-multi-stream-devicename4-etc.jsonl  speedtest-cli-single-stream-devicename3-etc.jsonl
