[package]
name = "speedometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["full"] }
cloud-storage = { version = "0.11" }
clap = { version = "4.0", features = ["derive"] }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
futures = { version = "0.3" }
indicatif = { version = "0.17" }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
csv = "1.1.6"
chrono = { version = "0.4.23", features = ["serde"] }
